--- a/index.html
+++ b/index.html
@@ -1,28 +1,7 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Ceri-anne Jackson, Developer</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Ceri-anne Jackson</h1>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:ceri@ceri-anne.co.uk">email</a></li>
-        		<li><a href="https://github.com/ceri-anne">github.com/ceri-anne</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Ceri-anne Jackson, Developer
+---
+<div class="blurb">
+	<h1>Hi there, I'm Ceri-anne Jackson</h1>
+</div><!-- /.blurb -->
