--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Ceri-anne Jackson, Developer
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Ceri-anne Jackson</h1>
+	<h1>Ceri-anne</h1>
 </div><!-- /.blurb -->
